look at what one interview made me do